--- a/views/layout/header.pug
+++ b/views/layout/header.pug
@@ -14,7 +14,7 @@ header(class="px-3.5 bg-white")
                 a(href="/publications/create") 
                     button(class="bg-principal-gray text-white py-2 px-8 border-2 border-principal-gray font-normal mr-2 hover:opacity-80") Crear
                 div#profileImage.w-14.h-14.border-2.border-principal-gray.cursor-pointer.shadow.relative
-                    img(src=user.image_url , alt="Imagen de perfil" class="w-full h-full")
+                    img(src=user.image_url ? `/img/profiles/${user.image_url}` : '/img/profiles/profilePredeterminated.png' , alt="Imagen de perfil" class="w-full h-full")
                 
                     div#menu(class="bg-principal-gray shadow-xl absolute top-14 right-0 min-h-[100px] min-w-[250px] z-50 hidden")
                         ul(class="text-white") 
