--- a/views/categories/viewAllCategories.pug
+++ b/views/categories/viewAllCategories.pug
@@ -13,7 +13,7 @@ block contenido
                 - let index = 0 // Inicializar el índice
                 each category in categories        
                     div(class="flex flex-col items-center justify-center")
-                        div(class="category rounded-2xl shadow-lg w-40 h-40 bg-cover bg-center bg-no-repeat cursor-pointer" style=`background-image: url(${category.image})` data-category-user= categoriesUserIds.includes(category.id) ? category.id : null)
+                        div(class="category rounded-2xl shadow-lg w-40 h-40 bg-cover bg-center bg-no-repeat cursor-pointer" style=`background-image: url(/img/backgroundsCategories/${category.image})` data-category-user= categoriesUserIds.includes(category.id) ? category.id : null)
                             input(type="hidden" value= category.id)
                             input#csrfToken(type="hidden" name="_csrf" value= csrfToken)
                         p.text-principal-gray.pt-1= category.name
