Autenticacion con google

--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -35,7 +35,7 @@ block contenido
                     .btns.w-full.mt-10    
                         button(class="bg-principal-gray text-white py-3 px-4 w-full mb-4").w-full Iniciar Sesion
                         
-                        button(class="border-2 border-principal-gray text-principal-gray w-full py-3 px-4 inline-flex items-center")
+                        a(href="/auth/google" class="border-2 border-principal-gray text-principal-gray w-full py-3 px-4 inline-flex items-center")
                             img(src="/img/project/google.svg", alt="").w-6.mr-2
                             span.w-full Iniciar Sesion con Google
 
