--- a/views/auth/register.pug
+++ b/views/auth/register.pug
@@ -37,7 +37,7 @@ block contenido
                     .btns.w-full.mt-14    
                         button(class="bg-principal-gray text-white py-3 px-4 w-full mb-4").w-full Crear Cuenta
                         
-                        button(class="border-2 border-principal-gray text-principal-gray w-full py-3 px-4 inline-flex items-center")
+                        a(href="/auth/google" class="border-2 border-principal-gray text-principal-gray w-full py-3 px-4 inline-flex items-center")
                             img(src="/img/project/google.svg", alt="").w-6.mr-2
                             span.w-full Continuar con Google
 
