--- a/views/inicio.pug
+++ b/views/inicio.pug
@@ -4,17 +4,48 @@ block contenido
     div(class="h-screen flex flex-col")
         include ./layout/header
 
-        main(class="h-screen bg-cover bg-center bg-no-repeat flex flex-col justify-center" style=`background-image: url(${imageUrl})`)
-            div.flex.items-center.flex-col
-                h2.text-5xl.text-polished-white Bienvenido a 
-                    span.font-bold Fotaza
-                p.text-xl.text-polished-white.mt-2 Busca las imagenes mas hermosas
+        main
+            //- Seccion buscador
+            section(class="h-screen bg-cover bg-center bg-no-repeat flex flex-col justify-center" style=`background-image: url(${imageUrl})`)
+                div.flex.items-center.flex-col
+                    h2.text-5xl.text-polished-white Bienvenido a 
+                        span.font-bold Fotaza
+                    p.text-xl.text-polished-white.mt-2 Busca las imagenes mas hermosas
 
-                label(class="relative block w-5/12 mx-auto mt-7")
-                    span(class="sr-only") Search
-                    span(class="absolute inset-y-0 left-0 flex items-center pl-2 mr-2")
-                        img(src="/img/project/search.svg" alt="").w-6
-                    input(class="font-medium h-14 pl-12 placeholder-italic placeholder-principal-gray block bg-polished-white w-full rounded-md py-2 pr-3 shadow-sm focus:outline-none focus:border-stone-950 focus:ring-stone-950 focus:ring-1 sm:text-sm" placeholder="Buscar imágenes" type="text" name="search")
+                    label(class="relative block w-5/12 mx-auto mt-7")
+                        span(class="sr-only") Search
+                        span(class="absolute inset-y-0 left-0 flex items-center pl-2 mr-2")
+                            img(src="/img/project/search.svg" alt="").w-6
+                        input(class="font-medium h-14 pl-12 placeholder-italic placeholder-principal-gray block bg-polished-white w-full rounded-md py-2 pr-3 shadow-sm focus:outline-none focus:border-stone-950 focus:ring-stone-950 focus:ring-1 sm:text-sm" placeholder="Buscar imágenes" type="text" name="search")
+                
+                p(class="absolute bottom-8 right-8 text-white") Fotografía de 
+                    span.font-bold= nameUserPhoto
+
+            //- Seccion fotos en general
             
-            p(class="absolute bottom-8 right-8 text-white") Fotografía de 
-                span.font-bold= nameUserPhoto
+            section#images(class="lg:columns-3 columns-2xs gap-4 my-8 space-y-4 max-w-7xl m-auto") 
+                each publication in publications
+                    div(class="relative group")
+                        a(href=`/publications/${publication.id}` target="_blank" class="relative block overflow-hidden") 
+
+                            img(src=`/uploads/${publication.image}` alt=`Imagen ${publication.title}` class="w-full transform object-cover transition-all duration-1000 transition-filter hover:scale-105")
+
+                            div(class="absolute bg-black bg-opacity-60 bottom-0 left-0 w-full h-full p-2 flex flex-col justify-between transition-all duration-500 opacity-0 group-hover:opacity-100") 
+                                
+                            //- info creador
+                            div(class="absolute top-0 transition-all duration-500 opacity-0 group-hover:opacity-100 p-2")
+                                a(href=`/users/${publication.user.username}` class="hover:underline text-white flex items-center gap-2") 
+                                    img(src=`/img/profiles/${publication.user.image_url}` alt=`Imagen de usuario ${publication.user.username}` class="w-9 h-8 rounded-full")
+                                    span(class="text-white text-xs")= publication.user.name 
+
+
+                            //- info nombre de imagen y categoria
+                            div(class="absolute bottom-0 flex justify-between items-center transition-all duration-500 opacity-0 group-hover:opacity-100 w-full p-2")
+                                span(class="text-white")= publication.title
+
+                                a(href="#") 
+                                    div(class="flex flex-col items-center") 
+                                        img(src=`/img/backgroundsCategories/${publication.category.image}` alt=`Imagen de categoria ${publication.category.name}` class="w-9 h-8 rounded-full")
+                                        span(class="text-white text-xs")= publication.category.name 
+
+            pre= JSON.stringify(publications,undefined,2)
