--- a/public/css/app.css
+++ b/public/css/app.css
@@ -947,11 +947,17 @@ video {
 .w-full {
   width: 100%;
 }
+.w-44 {
+  width: 11rem;
+}
 .min-w-\[250px\] {
   min-width: 250px;
 }
 .max-w-4xl {
   max-width: 56rem;
+}
+.max-w-7xl {
+  max-width: 80rem;
 }
 .max-w-\[200px\] {
   max-width: 200px;
@@ -959,23 +965,12 @@ video {
 .max-w-xs {
   max-width: 20rem;
 }
-.max-w-7xl {
-  max-width: 80rem;
-}
 .-translate-y-1\/2 {
   --tw-translate-y: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .translate-y-\[-50\%\] {
   --tw-translate-y: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.translate-y-\[100\%\] {
-  --tw-translate-y: 100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-.translate-y-\[0\%\] {
-  --tw-translate-y: 0%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 .scale-90 {
@@ -1435,6 +1430,9 @@ video {
 }
 .pt-4 {
   padding-top: 1rem;
+}
+.pt-5 {
+  padding-top: 1.25rem;
 }
 .text-left {
   text-align: left;
@@ -1913,20 +1911,18 @@ video {
 }
 
 
+.group:hover .group-hover\:inline {
+  display: inline;
+}
+
+
+.group:hover .group-hover\:contents {
+  display: contents;
+}
+
+
 .group:hover .group-hover\:translate-y-\[100\%\] {
   --tw-translate-y: 100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-
-.group:hover .group-hover\:translate-y-\[-100\%\] {
-  --tw-translate-y: -100%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-
-.group:hover .group-hover\:translate-y-\[0\%\] {
-  --tw-translate-y: 0%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1942,13 +1938,13 @@ video {
 }
 
 
-.group:hover .group-hover\:opacity-80 {
-  opacity: 0.8;
+.group:hover .group-hover\:opacity-100 {
+  opacity: 1;
 }
 
 
-.group:hover .group-hover\:opacity-100 {
-  opacity: 1;
+.group:hover .group-hover\:opacity-80 {
+  opacity: 0.8;
 }
 
 
@@ -1987,6 +1983,10 @@ video {
 
   .sm\:mt-\[-20px\] {
     margin-top: -20px;
+  }
+
+  .sm\:block {
+    display: block;
   }
 
   .sm\:inline {
@@ -2089,6 +2089,10 @@ video {
     display: flex;
   }
 
+  .md\:contents {
+    display: contents;
+  }
+
   .md\:h-fit {
     height: -moz-fit-content;
     height: fit-content;
@@ -2162,6 +2166,11 @@ video {
     line-height: 2rem;
   }
 
+  .md\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
   .md\:text-principal-gray {
     --tw-text-opacity: 1;
     color: rgb(57 62 70 / var(--tw-text-opacity));
@@ -2170,6 +2179,10 @@ video {
 
 
 @media (min-width: 1024px) {
+
+  .lg\:m-0 {
+    margin: 0px;
+  }
 
   .lg\:mx-4 {
     margin-left: 1rem;
