--- a/views/publications/create.pug
+++ b/views/publications/create.pug
@@ -9,7 +9,7 @@ block styles
 block contenido
     include ../layout/header
 
-    main(class="md:pt-10")
+    main(class="md:pt-10 relative")
         div(class="min-h-screen h-fit md:min-h-fit md:h-fit md:w-4/6 rounded-md shadow-md m-auto bg-white md:max-w-5xl relative md:mb-8")
             form(id="form" action="/publications/add-image" method="POST" enctype="multipart/form-data" class="relative h-fit") 
                 #privacyOptionsAndPhoto(class="p-4 h-fit") 
@@ -31,6 +31,12 @@ block contenido
                             label(for="privacy-protected" class="privacy flex items-center p-2 pl-3 hover:bg-gray-input text-principal-gray space-x-2 cursor-pointer")
                                 i(class="fa-solid fa-shield text-2xl")
                                 p Protegida
+
+                            input(type="radio" name="privacyItem" id="privacy-private" class="privacy-input hidden" value='private')
+                            label(for="privacy-private" class="privacy flex items-center p-2 pl-3 hover:bg-gray-input text-principal-gray space-x-2 cursor-pointer")
+                                i(class="fa-solid fa-lock text-2xl")
+                                p Privada
+
                     div(class="w-44 float-right mr-4 hidden sm:block")
                         .moreInfoPostType(class="h-fit hidden") 
                             a(href="/publications/types" class="text-blue-700 w-full flex justify-evenly group" target="_blank") 
@@ -142,13 +148,18 @@ block contenido
                             div
                                 input#input-price(type="text" name="price" placeholder="AR$0.00" class="appearance-none w-48 h-10 text-xl text-right border-2 border-secondary-gray p-1 pr-2 focus:outline-none")
                                 select(name="currency" class="text-xl h-10 bg-gray-input border-0 p-1")
-                                    option(value="ars" selected) ARS 
+                                    option(value="ars" selected) ARS 🇦🇷
                         span(id="errPrice").text-red-500.text-xs.hidden
                         span(id="errCurrency").text-red-500.text-xs.hidden.block
 
 
                         section#sectionLicenses(class="mt-10")   
                             h7(class="text-2xl my-2") Licencias 
+                            //-Unique no tiene licencias
+                            p#unique-licences(class="hidden text-red-500") 
+                                i(class="fa-solid fa-triangle-exclamation mr-1")
+                                span No es necesario elegir una licencia para este tipo de venta
+
                             #licenses(class="space-y-4")
                                 //- Cargar licencias segun opcion libre o venta
                                 //- Primero cargaremos las opciones de licencias Libre ya que esta seleccionado por defecto
@@ -164,8 +175,8 @@ block contenido
                                         
                                         .radio-license(class="w-1/12 grid place-content-center")
                                             input(type="radio" name="license" id=`license-${license.id}` class="hidden" checked=(license.id == 1))
-                                            label.modified-radio(for=`license-${license.id}` class=`${license.id == 1 ? 'bg-black' : ''} w-5 h-5 border-4 border-principal-gray rounded-full cursor-pointer hover:bg-gray-300 inline-block relative`)
-                                                span.radio-select(class="absolute top-0 left-0 w-full h-full rounded-full border-2 border-white")
+                                            label.modified-radio(for=`license-${license.id}` class="w-5 h-5 border-4 border-principal-gray rounded-full cursor-pointer hover:bg-gray-300 inline-block relative")
+                                                span.radio-select(class=`absolute top-0 left-0 w-full h-full rounded-full border-2 border-white ${license.id == 1 ? 'bg-black' : ''}`)
                                     
 
                                             
@@ -186,6 +197,10 @@ block contenido
             div(class="circlesForm text-center space-x-2 pb-3 mt-3 sm:mt-[-20px] text-principal-gray z-50")
                 i(class="fa-solid fa-circle")
                 i(class="fa-regular fa-circle")
+
+        #alert(class="hidden flex items-center bg-blue-500 text-white text-sm font-bold px-4 py-3 absolute top-0 left-1/2 transform -translate-x-1/2 -translate-y-1/2" role="alert")
+            i(class="fa-solid fa-info mr-4")
+            p#infoMessage
 
     template#categoryOfAll 
         //-input(type="radio" class="hidden" name="category")
